# spin_monolith

./: .gitignore  Cargo.toml  Readme.md  spin.toml
src/: api.rs  lib.rs  templates.rs  types.rs
templates/: base.html  index.html  product.html  register.html
tera_parser/: Cargo.toml
tera_parser/src/: main.rs
